--- a/style.css
+++ b/style.css
@@ -50,12 +50,7 @@ body {
   margin: 10px;
 }
 
-.jogador_1 {
+.jogador {
   background-color: black;
-  border-radius: 50%;
-}
-
-.jogador_2 {
-  background-color: red;
   border-radius: 50%;
 }
