--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-direction: column-reverse;
+  flex-direction: column;
   background-image: linear-gradient(to top, #89f7fe 0%, #66a6ff 100%);
 }
 
