imagens e fundo do card

--- a/style.css
+++ b/style.css
@@ -64,7 +64,9 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  background-color: rgba(0, 0, 0, 0.8);
+  /* background-color: rgba(0, 0, 0, 0.8); */
+  background: no-repeat url(./img/background.jpg);
+  background-size: cover;
   color: white;
   width: 100vw;
   height: 100vh;
