--- a/style.css
+++ b/style.css
@@ -71,7 +71,15 @@ body {
   width: 100vw;
   height: 100vh;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   font-size: 3rem;
+}
+
+.criaTrofeu {
+  background: no-repeat url(./img/trofeu.png);
+  background-size: contain;
+  width: 150px;
+  height: 150px;
 }
