--- a/style.css
+++ b/style.css
@@ -5,7 +5,10 @@
 }
 
 h1 {
-  padding: 10px 0px 50px 0px;
+  padding: 20px;
+  font-family: "Georama", sans-serif;
+  font-size: 40px;
+  color: #fff;
 }
 
 body {
@@ -14,14 +17,18 @@ body {
   display: flex;
   align-items: center;
   flex-direction: column;
+  background-image: url(img/estadio.jpg);
+  background-size: cover;
+  min-width: 360px;
+  background-position: bottom;
 }
 
 .bloco {
-  width: 40px;
-  height: 40px;
-  background-color: #fff;
+  width: 48px;
+  height: 48px;
   border-radius: 50%;
-  margin: 5px;
+  margin: 1px;
+  background-color: rgba(255, 255, 255, 0.514);
 }
 
 .linha {
@@ -29,30 +36,39 @@ body {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  background-image: linear-gradient(to top, #89f7fe 0%, #66a6ff 100%);
 }
 
 .container {
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-direction: row;
+  background-image: url(img/campo.jpg);
+  border: 2px solid #fff;
+  background-size: 100% 100%;
+  background-position: center;
+  border-radius: 15px;
+  box-shadow: 10px 10px 43px 0px rgba(255, 255, 255, 0.75);
+  -webkit-box-shadow: 10px 10px 43px 0px rgba(255, 255, 255, 0.75);
+  -moz-box-shadow: 10px 10px 43px 0px rgba(255, 255, 255, 0.75);
 }
 
 .jogadores {
   display: flex;
-  margin: 20px;
+  margin: 50px;
 }
 
 .jogadores div {
-  width: 80px;
-  height: 80px;
-  margin: 10px;
+  width: 100px;
+  height: 100px;
 }
 
 .jogador {
-  background-color: red;
-  border-radius: 50%;
+  background-image: url(img/bola.png);
+  background-size: cover;
+}
+
+.bloco {
+  background-size: cover;
 }
 
 .cardVitoria {
@@ -67,4 +83,64 @@ body {
   justify-content: center;
   align-items: center;
   font-size: 3rem;
+}
+
+.glass {
+  width: 350px;
+  height: 500px;
+  background: rgba(255, 255, 255, 0.25);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  position: absolute;
+  top: 12%;
+  display: none;
+  flex-direction: column;
+}
+
+.glass > h2,
+.glass > h3,
+.glass > p,
+.glass > span {
+  margin: 25px;
+  text-align: center;
+  font-family: "Georama", sans-serif;
+  color: #0a105a;
+}
+
+.btn {
+  position: absolute;
+  top: 5%;
+  right: 5%;
+}
+
+@media (min-width: 800px) {
+  .bloco {
+    width: 80px;
+    height: 80px;
+    margin: 5px 10px 5px 10px;
+  }
+  .glass {
+    width: 750px;
+    height: 570px;
+    top: 8.5%;
+  }
+  .btn {
+    top: 3.5%;
+    right: 23%;
+  }
+  .glass > h2 {
+    font-size: 40px;
+  }
+  .glass > h3 {
+    font-size: 30px;
+  }
+  .glass > span {
+    font-size: 30px;
+  }
+  .glass > p {
+    font-size: 25px;
+  }
 }
