--- a/style.css
+++ b/style.css
@@ -53,6 +53,12 @@ body {
 .jogadores {
   display: flex;
   margin: 50px;
+  background: rgba(255, 255, 255, 0.25);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(20px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
 }
 
 .jogadores div {
@@ -61,7 +67,7 @@ body {
 }
 
 .jogador {
-  background-image: url(img/bola.png);
+  background-image: url(img/escudo-fluminense.png);
   background-size: cover;
 }
 
@@ -117,20 +123,27 @@ body {
   right: 5%;
 }
 
+.cronometro {
+  color: #fff;
+  font-family: "Georama", sans-serif;
+  font-size: 25px;
+}
+
 @keyframes mover {
   0% {
-    transform: translateY(0px);
+    transform: translateY(-300px);
+    opacity: 0;
   }
   50% {
     opacity: 0.5;
   }
   100% {
-    transform: translateY(-300px);
-    opacity: 0;
+    transform: translateY(0px);
+    opacity: 1;
   }
 }
 
-@keyframes maior {
+/* @keyframes maior {
   0% {
     transform: scale(0.1);
   }
@@ -140,7 +153,7 @@ body {
   100% {
     transform: scale(1);
   }
-}
+} */
 
 @media (min-width: 800px) {
   .bloco {
