criar botão reiniciar

--- a/style.css
+++ b/style.css
@@ -64,7 +64,6 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  /* background-color: rgba(0, 0, 0, 0.8); */
   background: no-repeat url(./img/background.jpg);
   background-size: cover;
   color: white;
@@ -77,12 +76,37 @@ body {
   font-size: 3rem;
 }
 
+.criarTitulo,
+.reiniciar,
+.criaVencedor {
+  color: rgb(229, 255, 0);
+  font-size: 40px;
+  font-weight: 700;
+  text-shadow: 2px 2px rgb(143, 41, 41);
+}
+
 .criaTrofeu {
   background: no-repeat url(./img/trofeu.png);
   background-size: contain;
   width: 120px;
   height: 140px;
   margin: 32px;
+}
+
+.reiniciar {
+  margin: 32px 0;
+  background-color: #66a6ff;
+  background-image: url(./img/Futebol-Bola-de-Futebol.png);
+  background-size: cover;
+  border-radius: 39px;
+  font-size: 20px;
+  width: 81px;
+  height: 81px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  z-index: 10;
 }
 
 .fogos-artificios {
