--- a/style.css
+++ b/style.css
@@ -136,15 +136,19 @@ body {
 
 @keyframes mover {
   0% {
-    transform: translateY(-300px);
+    transform: translateY(0px);
+    opacity: 0;
+  }
+  25% {
+    transform: translateY(-200px);
     opacity: 0;
   }
   50% {
-    transform: translateY(-200px);
+    transform: translateY(-100px);
     opacity: 0.3;
   }
   75% {
-    transform: translateY(-100px);
+    transform: translateY(25px);
     opacity: 0.6;
   }
   100% {
