--- a/style.css
+++ b/style.css
@@ -86,11 +86,15 @@ body {
 }
 
 .criaTrofeu {
-  background: no-repeat url(./img/trofeu.png);
+  background: no-repeat url(./img/trofeu.png) rgba(255, 255, 255, 0.25);
   background-size: contain;
   width: 120px;
   height: 140px;
   margin: 32px;
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(4px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
 }
 
 .reiniciar {
