--- a/style.css
+++ b/style.css
@@ -68,3 +68,103 @@ body {
   align-items: center;
   font-size: 3rem;
 }
+
+.cardInicial {
+  width: 100%;
+  height: 100%;
+  background-image: url(./Depositphotos_83082692_xl-2015-scaled.jpg);
+  background-size: cover;
+  background-position: center;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  height: 600px;
+}
+
+#titulo {
+  color: gold;
+  text-shadow: 2px 2px black;
+  font-size: 40px;
+}
+
+#trofeu {
+  width: 70px;
+  height: 70px;
+}
+
+.criarTimes {
+  width: 184px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+
+#time1 {
+  width: 50px;
+  height: 50px;
+}
+
+#versus {
+  width: 50px;
+  height: 50px;
+}
+
+#time2 {
+  width: 50px;
+  height: 50px;
+}
+
+.botoesIniciais {
+  background-image: url(./Futebol-Bola-de-Futebol-PNG.png);
+  background-size: cover;
+  border-radius: 39px;
+  width: 81px;
+  height: 81px;
+  color: rgb(229, 255, 0);
+  font-size: 20px;
+  font-weight: 700;
+  text-shadow: 2px 2px rgb(143, 41, 41);
+}
+
+#regras {
+  width: 100%;
+  height: 100%;
+  background-image: url(./Depositphotos_83082692_xl-2015-scaled.jpg);
+  background-size: cover;
+  background-position: center;
+  position: absolute;
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#regrasEscritas{
+  width: 265px;
+  height: 500px;
+  background-color: white;
+  opacity: 0.8;
+  font-size: 25px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+}
+
+#botaoFechar {
+  margin-top: 20px;
+  width: 64px;
+  height: 32px;
+
+}
