--- a/style.css
+++ b/style.css
@@ -99,6 +99,16 @@ body {
   justify-content: center;
   align-items: center;
   font-size: 3rem;
+  animation: surgeVencedor 1s ease forwards;
+}
+
+@keyframes surgeVencedor {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 .glass {
