--- a/style.css
+++ b/style.css
@@ -166,5 +166,45 @@ body {
   margin-top: 20px;
   width: 64px;
   height: 32px;
+}
 
+#equipe {
+  width: 100%;
+  height: 100%;
+  background-image: url(./Depositphotos_83082692_xl-2015-scaled.jpg);
+  background-size: cover;
+  background-position: center;
+  position: absolute;
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#equipeEscritas{
+  width: 265px;
+  height: 500px;
+  background-color: white;
+  opacity: 0.8;
+  font-size: 25px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+}
+
+#equipeContainer {
+  width: 265px;
+  height: 500px;
+  background-color: white;
+  opacity: 0.8;
+  font-size: 25px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
 }
